# intime-v3

./: .cursorrules  .env.local.backup.20251119_213638  .env.local.example  .env.local.example.ai  .geminirules  .gitattributes  .gitignore  .mcp.json  .vercelignore  .zshrc  ALL-MIGRATIONS.sql  APPLY-MIGRATIONS.sql  AUDIT-SUMMARY-2025-11-20.md  BOOTSTRAP.sql  CLAUDE.md  CODEBASE-REVIEW-SPRINT-6.md  CURSOR-SYNC-STATUS.md  DATABASE-WORKFLOW.md  DEPLOYMENT-INSTRUCTIONS.md  DEPLOYMENT-SAFETY-SUMMARY.md  DEPLOYMENT-SUMMARY.md  EPIC-2.5-EXECUTIVE-SUMMARY.md  FILE-ORGANIZATION-ANALYSIS.md  GEMINI-USAGE-GUIDE.md  HIERARCHY-WORKFLOW-INTEGRATION.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION-PLAN.md  InTime.m  InTime_Gap_Analysis_Feb2026.docx  InTime_New_Hire_Onboarding.pptx  InTime_Training_Program.pptx  KNOWN-ISSUES.md  MANUAL-TESTING-SPRINT-1.md  MASTER-DESIGN-AND-EXECUTION-GUIDE.md  MASTER-SYSTEM-AUDIT.md  MIGRATION-RUNNER.html  PLACEMENTS_TAB_IMPLEMENTATION.md  PLACEMENTS_VISUAL_GUIDE.md  PRODUCTION-CHECKLIST.md  (+44 more)
.archive/: README.md
.claude/: AGENT-USAGE-EXAMPLES.md  AGENTS-REFERENCE.md  CLAUDE.md  CUSTOMIZATION-COMPLETE.md  DOCUMENTATION-INDEX.md  IMPLEMENTATION-STATUS.md  MCP-STAFFING-INTEGRATIONS.md  QUICK-COMMANDS.md  README.md  SETUP-GUIDE.md  SIMPLIFICATION-COMPLETE.md  TEST-RESULTS-FINAL-WORKING.md  mcp.json  settings.json
.gemini/: settings.json
.github/: VERCEL_SECRETS.txt
database/: schema.sql
docs/: ARCHITECTURE.md  BACKEND-SYNC-TRACKER.md  BOARD-EXECUTIVE-SUMMARY.md  (+31 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+7080 files in other folders)
